...





<!--    <Button-->
<!--        android:id="@+id/startStopButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/ExeterBlue"-->
<!--        android:text="@string/start_button_initial_text"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
...
